--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "electron-jupyter",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "electron ."
   },
